# smri-fm

./: .gitignore  README.md  pyproject.toml
datasets/aabc/scripts/: build_aabc_wds.py
datasets/openneuro/: README.md
datasets/openneuro/scripts/: data_curation.ipynb
experiments/aabc_ood_eval/: README.md
experiments/aabc_ood_eval/scripts/: build_aabc_tables.py  path_utils.py  run_brainage_transfer.py  run_cognition_transfer.py
experiments/adni_ood_eval/: README.md
experiments/adni_ood_eval/scripts/: build_adni_tables.py  run_brainage_transfer.py  run_cognition_transfer.py  run_prognosis_models.py
experiments/brainiac_dlbs_eval/: README.md
experiments/brainiac_dlbs_eval/scripts/: create_dlbs_subset.py  make_dlbs_brainage_csv.py  make_dlbs_openneuro_tables.py  path_utils.py  run_brainage_inference.py
experiments/synthseg_ridge_baseline/: README.md
experiments/synthseg_ridge_baseline/scripts/: export_all_experiment_metrics.py  run_brainage_models.py  run_cognition_bag_models.py  run_ridge.py  summarize_fs_core_results.py  summarize_interpretability_groups.py  summarize_r2_delta_results.py
preprocessing/: Dockerfile  README.md  pipeline.py
scripts/: preprocess.sbatch
src/data/: __init__.py  mri_data.py
src/smri_mae/: main_pretrain.py  masking.py  model_mae.py  modules.py  utils.py  visualization.py
src/smri_mae/config/: default_pretrain.yaml
tests/: test_aabc_ood_eval.py  test_baselines.py  test_brainage_tabular_models.py  test_synthseg_cross_domain_cv.py
