[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "smri-fm"
dynamic = ["version"]
description = "MedARC sMRI foundation model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython",
    "jupyter",
    "matplotlib",
    "nibabel",
    "numpy",
    "omegaconf",
    "pandas",
    "pre-commit",
    "pyradiomics-fix",
    "pytest",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tabulate",
    "torch==2.8.0",
    "torchvision",
    "tqdm",
    "wandb",
]

[tool.setuptools.packages.find]
include = ["baselines*"]
exclude = ["preprocessing*"]

[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722"]
